Upgrade to JDK 19 to try out virtual threads